--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "config": {
     "puppeteer_skip_chromium_download": "true"
   },
