--- a/package.json
+++ b/package.json
@@ -18,16 +18,14 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lucide-react": "^0.263.1",
-    "puppeteer": "^21.11.0",
+    "playwright": "^1.40.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "engines": {
     "node": "18.x"
   },
-  "config": {
-    "puppeteer_skip_chromium_download": "false"
-  },
+  "config": {},
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
