--- a/render.yaml
+++ b/render.yaml
@@ -11,4 +11,4 @@ services:
       - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
         value: "true"
       - key: PUPPETEER_EXECUTABLE_PATH
-        value: /usr/bin/google-chrome-stable
+        value: /app/.apt/usr/bin/google-chrome
