--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lucide-react": "^0.263.1",
+    "node-fetch": "^3.3.2",
     "playwright": "^1.40.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/node-fetch": "^2.6.13",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
